--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
   "dependencies": {
-    "@excalidraw/eslint-config": "1.0.1",
-    "@excalidraw/prettier-config": "1.0.2",
-    "@types/debug": "4.1.5",
-    "@types/express": "4.17.11",
-    "@types/node": "14.14.31",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
     "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "socket.io": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^5.0.0",
     "cross-env": "^7.0.3",
-    "debug": "4.3.1",
-    "dotenv": "^10.0.0",
-    "eslint": "7.21.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "express": "4.17.1",
-    "prettier": "2.2.1",
-    "socket.io": "^4.6.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "4.2.3"
+    "debug": "^4.3.7",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.12.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   },
   "license": "MIT",
   "main": "dist/index.js",
-  "name": "excalidraw-portal",
-  "prettier": "@excalidraw/prettier-config",
+  "name": "excalidraw-room",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "fix:code": "yarn test:code --fix",
@@ -31,10 +26,10 @@
     "fix": "yarn fix:other && yarn fix:code",
     "prettier": "prettier . --ignore-path=.gitignore",
     "start": "node dist/index.js",
-    "start:dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
-    "test:code": "eslint --ext .ts .",
+    "test:code": "eslint .",
     "test:other": "yarn prettier --list-different",
     "test": "yarn test:other && yarn test:code"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
